Bug fix - Submit button text was showing as white on iOS & made dashboard preview bigger on mobile.

--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,7 @@ h1 {
     margin-bottom: 0; 
 }
 .dashboard-preview {
-    width: 1312px;
+    max-width: 1312px;
     margin-top: 0; 
 }
 .bottom-line {
@@ -420,6 +420,7 @@ h1 {
     font-size: 28px;
     font-weight: 100;
     background-color: #fff;
+    color: black; 
     border: 1px solid #000;
     cursor: pointer;
     margin-top: 0;
